// proto 를 사용한다는 의미
syntax = "proto3";

// option go_package 를 통해 경로를 설정할 수 있음
option go_package = '/auth';


message AuthData{
  //고유한 숫자값 지정해야함.
  string token=1;
  int64 createDate=2;
  int64 expireDate = 3;
}

message VerifyData{
  //고유한 숫자값 지정해야함.
  ResponseType status = 1;
  AuthData auth = 2;
}
enum ResponseType{
  SUCCESS = 0;
  FAILED = 1;
  EXPIERD_DATE = 2;
}

//토큰생성 요청
message CreateTokenReq{
  //rpc CreateAuth(CreateTokenReq) 호출시 넘겨줄 값
  AuthData auth = 1;
}

//토큰 검증 요청
message VerifyTokenReq{
  string token = 1;
}


//토큰 생성 응답
message CreateTokenRes{
  AuthData auth = 1;
}
//토큰 검증 응답
message VerifyTokenRes{
  VerifyData v = 1;
}

service AuthService{
  rpc CreateAuth(CreateTokenReq) returns (CreateTokenRes);
  rpc VerifyAuth(CreateTokenReq) returns (CreateTokenRes);
}